--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web-dev-simplified/is-wds",
+  "name": "simplified/is-wdsaaasass",
   "version": "1.0.0",
   "description": "Is the string WDS?",
   "main": "index.js",
